--- a/angular/angular.json
+++ b/angular/angular.json
@@ -124,6 +124,10 @@
               "devServerTarget": "lobitos:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
