--- a/angular/package.json
+++ b/angular/package.json
@@ -26,6 +26,7 @@
     "firebase": ">= 5.5.7 <8",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
+    "time-ago-pipe": "^1.3.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
